CHANGES.txt - 2006-03-13
------------------------

CHANGES IN CUPS V1.2rc1

	- Added Spanish localization files (STR #1480)
	- Fixed localization of a few scheduler messages (STR
	  #1478)
	- Fixed support for HEAD requests in the scheduler (STR
	  #1481).


CHANGES IN CUPS V1.2b2

	- Updated the CUPS design description.
	- Added --enable-32bit and --enable-64bit configure
	  options to allow building of separate 32/64-bit
	  libraries on systems that support both environments
	  (STR #1472)
	- Various compiler warning fixes.
	- Fixes for Solaris 10 builds against old GNU TLS and
	  LDAP libraries.
	- Added a cupsArrayUserData() function to retrieve the
	  user data pointer for an array (useful for typing
	  arrays)
	- The ppdEmitString() function did not compute the
	  required buffer size properly, leading to dropped
	  characters on the end of the printer commands in pstops
	  and imagetops (STR #1470)


CHANGES IN CUPS V1.2b1

	- The serial backend now supports Equinox 8-port serial
	  hubs (STR #526)
	- The IPP backend now supports a compression option to
	  compress print files as they are sent to the remote
	  server (STR #956)
	- The CUPS browse protocol now supports passing of
	  default options and browse timeout values from the
	  server to the clients (STR #800)
	- Implicit classes that timed out could cause the
	  scheduler to crash (STR #1439)
	- Added DragonFly support in local device backends (STR
	  #1362)
	- Added LDAP printer browsing support (STR #338)
	- Added official support for printer maintenance commands
	  via the CUPS Command file format and hooks in the
	  printer-type and web interfaces (STR #932)
	- The HP-GL/2 filter could get in an infinite loop trying
	  to convert HP-PCL files (STR #1415)
	- CUPS now implements the HTTP/1.1 Expect header (STR
	  #1407)
	- Options in PPD files are no longer automatically put in
	  an "Extra" group; rather, all options that are not
	  inside an Open/CloseGroup will be placed in the