@@ -87,20 +87,20 @@
 *ImageableArea w144h90/Label - 2 x 1.25": "0 0 144 90"
 *ImageableArea w144h144/Label - 2 x 2": "0 0 144 144"
 *ImageableArea w144h216/Label - 2 x 3": "0 0 144 216"
-*ImageableArea w209h72/Label - 2.9 x 1": "0 0 209 72>>"
-*ImageableArea w288h144/Label - 4 x 2": "0 0 288 144"
-*ImageableArea w288h216/Label - 4 x 3": "0 0 288 216"
-*ImageableArea w288h288/Label - 4 x 4": "0 0 288 288"
-*ImageableArea w288h360/Label - 4 x 5": "0 0 288 360"
-*ImageableArea w288h360/Label - 4 x 5": "0 0 288 360"
-*ImageableArea w288h432/Label - 4 x 6": "0 0 288 432"
+*ImageableArea w209h72/Label - 2.9 x 1": "0 0 209 72"
+*ImageableArea w288h144/Label - 4 x 2": "0 0 280.8 144"
+*ImageableArea w288h216/Label - 4 x 3": "0 0 280.8 216"
+*ImageableArea w288h288/Label - 4 x 4": "0 0 280.8 288"
+*ImageableArea w288h360/Label - 4 x 5": "0 0 280.8 360"
+*ImageableArea w288h360/Label - 4 x 5": "0 0 280.8 360"
+*ImageableArea w288h432/Label - 4 x 6": "0 0 280.8 432"
 
 *DefaultPaperDimension: w288h360
 *PaperDimension w144h72/Label - 2 x 1": "144 72"
 *PaperDimension w144h90/Label - 2 x 1.25": "144 90"
 *PaperDimension w144h144/Label - 2 x 2": "144 144"
 *PaperDimension w144h216/Label - 2 x 3": "144 216"
-*PaperDimension w209h72/Label - 2.9 x 1": "209 72>>"
+*PaperDimension w209h72/Label - 2.9 x 1": "209 72"
 *PaperDimension w288h144/Label - 4 x 2": "288 144"
 *PaperDimension w288h216/Label - 4 x 3": "288 216"
 *PaperDimension w288h288/Label - 4 x 4": "288 288"
